--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
 		"sass": "^1.49.11",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
+		"vue-loader": "^15.9.6",
+		"vue-template-compiler": "^2.6.14",
 		"webpack": "^5.71.0",
 		"webpack-bundle-analyzer": "^4.5.0",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.8.0"
 	},
 	"dependencies": {
-		"axios": "^0.26.1"
+		"vue": "^2.6.14",
+		"vuex": "^3.1.0"
 	}
 }
